--- a/Doc/notebooks/3_NumpyIntro.ipynb
+++ b/Doc/notebooks/3_NumpyIntro.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See <A HREF=\"MatplotlibIntro.ipynb\" target=\"_blank\">MatplotlibIntro</A> file for more details."
+    "See <A HREF=\"4_MatplotlibIntro.ipynb\" target=\"_blank\">MatplotlibIntro</A> file for more details."
    ]
   },
   {
@@ -64,7 +64,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "The library **numpy** is used almost all Python numerical calculations. It provides all kind of data structures vectors, matrix and higher dimension data structures. It's impemented in C and Fortran whith great performances for vectorized calculations. To use it you need to import the package by for example:"
+    "The library **numpy** is used in almost all Python numerical calculations. It provides all kind of data structures vectors, matrix and higher dimension data structures. It's impemented in C and Fortran whith great performances for vectorized calculations. To use it you need to import the package by for example:"
    ]
   },
   {
